force-app/main/default/objects/Country_Queue__mdt/Country_Queue__mdt.object-meta.xml
<CustomObject>
    <description>Stores Salesforce Queue IDs and configuration for each country and function. Used by flows and Apex for queue routing - no hardcoded queue IDs anywhere in the codebase.</description>
    <label>Country Queue</label>
    <pluralLabel>Country Queues</pluralLabel>
</CustomObject>