force-app/main/default/objects/Country_Queue__mdt/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>Country name matching Lead/Account picklist values e.g. Korea, Japan. Multi-country records use ALL.</description>
    <label>Country Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>