force-app/main/default/objects/Country_Queue__mdt/fields/Country_Name__c.field-meta.xml
<CustomField>
    <fullName>Country_Name__c</fullName>
    <description>Full country name matching the Operation_Country__c and Target_Country__c picklist values (e.g. Korea, Japan, Indonesia). Used by conversion flow for account naming and country matching. Null for non-country-specific queues (e.g. Hyperscaler).</description>
    <label>Country Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>