force-app/main/default/objects/Country_Queue__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Default TRUE. Set FALSE to disable routing to this queue without deleting the record.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>