force-app/main/default/objects/Country_Queue__mdt/fields/Queue_Email__c.field-meta.xml
<CustomField>
    <fullName>Queue_Email__c</fullName>
    <description>Distribution email for the queue. Used by notification flows to send alert emails.</description>
    <label>Queue Email</label>
    <type>Email</type>
</CustomField>