force-app/main/default/objects/Country_Queue__mdt/fields/Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>Queue_Id__c</fullName>
    <description>Salesforce Queue Record ID (18-char). Set after queue creation. Must be updated in each environment.</description>
    <label>Queue ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>