force-app/main/default/objects/Country_Queue__mdt/fields/Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Queue_Name__c</fullName>
    <description>The exact queue name as created in Salesforce Setup - Queues. Must match exactly for Assignment Rule and other references.</description>
    <label>Queue Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>