force-app/main/default/objects/Country_Queue__mdt/fields/Queue_Type__c.field-meta.xml
<CustomField>
    <fullName>Queue_Type__c</fullName>
    <description>Type of queue. Values: Sales, Finance, Revenue_Ops, Interconnect, Integration_Admin, Website_Enquiries, SINA1</description>
    <label>Queue Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>